@@ -11,6 +11,7 @@
 * Fix - Error when attempting to change the payment method for a subscription with UPE enabled.
 * Add - Multi-Currency track currency added.
 * Fix - Fill missing order_intent_info even if an exception occurs.
+* Fix - Authorize and capture payments later with new credit cards.
 * Add - Gutenberg Block Widget for Multi-Currency.
 * Update - WCPay logo
 * Fix - Translations in transaction/deposit exports
